<resources>
    <string name="app_name">SGTU</string>

    <string name="titulo">Gerencia de Transporte Urbano</string>
    <string name="registro">Registro</string>
    <string name="comprar">Comprar pasaje</string>
    <string name="buscar">Buscar ruta</string>
    <string name="reportar">Mandar queja</string>
    <string name="lineaTrans">Linea de transporte:</string>
    <string name="paradero1">Paradero inicial:</string>
    <string name="paradero2">Paradero final: </string>
    <string name="total">Total: </string>
    <string name="precio">S/. 0.00 </string>
    <string name="descrip">Descripcion </string>
    <string name="asunto">Escriba aqui el motivo de la queja </string>
    <string name="consulta">Consultar linea de transporte </string>
    <string name="sinQuejas">No hay quejas registradas</string>
    <string name="fecha">Fecha: </string>
    <string name="precio_total">Total: </string>

    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_nombre">Nombres</string>
    <string name="hint_ap">Apellidos</string>

    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="crear">Crear cuenta</string>
    <string name="btncomprar">Comprar</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="buscarRuta">Buscar ruta</string>
    <string name="verInfo">Informacion</string>
    <string name="verQuejas">Lista de quejas</string>

</resources>
