<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="10sp"
        android:layout_marginStart="10sp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginTop="20sp"
            android:gravity="center_horizontal"
            android:text="@string/titulo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitulo"
            android:layout_marginBottom="10sp"
            android:background="@drawable/rounded_border"
            android:hint="@string/hint_user"
            android:inputType="text"
            android:padding="5sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edUser"
            android:layout_marginBottom="20sp"
            android:background="@drawable/rounded_border"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:padding="5sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnIniciarSesion"
            android:onClick="iniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edPassword"
            android:layout_marginBottom="10sp"
            android:background="@drawable/rounded_btn"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnIniciarSesion"
            android:layout_marginBottom="10sp"
            android:background="@drawable/rounded_btn2"
            android:elevation="10dp"
            android:onClick="redirectRegistro"
            android:text="@string/registrarse"
            android:textColor="@color/black" />


    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo_municipalidad2" />

</RelativeLayout>