<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComprarActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineaTrans"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical"
            android:layout_marginBottom="15sp"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/spinnerLineaTransporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paradero1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical"
            android:layout_marginBottom="15sp"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/spinnerParaderoInicial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paradero2"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical"
            android:layout_marginBottom="15sp"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/spinnerParaderoFinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginBottom="15sp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingEnd="10sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textSize="20sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:background="@drawable/rounded_btn"
            android:text="@string/btncomprar"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>