<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReportarActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lineaTrans"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:orientation="vertical"
            android:layout_marginBottom="15sp"
            android:gravity="center_vertical">

            <Spinner
                android:id="@+id/spinnerLineaTransporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descrip"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="260sp"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:hint="@string/asunto"
            android:gravity="top"
            android:background="@drawable/rounded_border"
            android:padding="5sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_btn"
        android:text="@string/enviar"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:textColor="@color/white" />

</LinearLayout>