<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        card_view:cardCornerRadius="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:layout_marginEnd="10sp"/>

                <TextView
                    android:id="@+id/itemCompraFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineaTrans"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:layout_marginEnd="10sp"/>

                <TextView
                    android:id="@+id/itemCompraLinea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:background="@color/grey"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradero1"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingStart="5sp"
                    android:layout_marginEnd="10sp"/>

                <TextView
                    android:id="@+id/itemCompraParaderoInicial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:background="@color/grey"
                    android:paddingStart="5sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paradero2"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingStart="5sp"
                    android:layout_marginEnd="10sp"/>

                <TextView
                    android:id="@+id/itemCompraParaderoFinal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:background="@color/grey"
                    android:paddingStart="5sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/grey_dark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_total"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:paddingStart="5sp"
                    android:paddingEnd="5sp"
                    android:layout_marginEnd="10sp"/>

                <TextView
                    android:id="@+id/itemCompraPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>