<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ConsultaActivity">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lineaTrans"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:orientation="vertical"
        android:layout_marginBottom="15sp"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/spinnerLineaTransporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyBtnInfo"
        android:visibility="invisible"
        android:onClick="redirectInfoEmpresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5sp"
        android:background="@drawable/btn_image"
        android:elevation="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="20sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:src="@drawable/customer_service_64"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verInfo"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyBtnListaQuejas"
        android:visibility="invisible"
        android:onClick="redirectListaQuejas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5sp"
        android:background="@drawable/btn_image"
        android:elevation="10sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="20sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:src="@drawable/bus_ticket128"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verQuejas"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <!--android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_quejas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" /-->

    <!--TextView
        android:id="@+id/tvSinQuejas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sinQuejas"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:visibility="invisible"/-->

</LinearLayout>